# astarte-interfaces-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  _typos.toml  committed.toml  pyproject.toml  release-plz.toml
.github/: codecov.yaml  dependabot.yaml
.github/actions/install-deps/: action.yaml
.github/workflows/: check.yaml  ci.yaml  common.yaml  coverage.yaml  e2e-test.yaml  library.yaml  multi-platform.yaml  publish.yaml  reuse-lint.yaml  test.yaml  warmup-caches.yaml
interfaces/: org.astarte-platform.rust.e2etest.DeviceProperty.json
scripts/: check-for-publish.sh  coverage.sh
scripts/ci/: check-for-publish.sh  coverage.sh
src/: schema.rs
src/interface/: mod.rs
src/interface/datastream/: object.rs
src/mapping/: collection.rs  endpoint.rs  properties.rs
src/mapping/datastream/: individual.rs  object.rs
