# This file is part of Astarte.
#
# Copyright 2025 SECO Mind Srl
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "astarte-interfaces"
version = "0.1.1"
edition = "2021"
homepage = "https://astarte.cloud/"
license = "Apache-2.0"
repository = "https://github.com/astarte-platform/astarte-interfaces-rust"
rust-version = "1.78"
description = "Interfaces used by Astarte to define how data is exchange with a Device."

[features]
# Keeps the order of the mappings
preserve_order = ["serde_json/preserve_order"]
# Add description and doc fields to the interfaces
doc-fields = []
# Add the fields  only used by the server to the interfaces.
server-fields = []
# All interface fields are checked and must be valid
strict = []

[dependencies]
cfg-if = "1.0.0"
regex = "1.11.0"
serde = { version = "1.0.184", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
thiserror = { version = "2.0.8" }
tracing = "0.1.37"

[dev-dependencies]
pretty_assertions = "1.4.1"
tracing-subscriber = "0.3.0"
